--- a/apollo-gate-way/gateway/package.json
+++ b/apollo-gate-way/gateway/package.json
@@ -15,6 +15,7 @@
     "apollo-utilities": "1.3.2",
     "dotenv": "7.0.0",
     "express": "~4.16.0",
+    "faye": "1.2.4",
     "graphql-voyager": "1.0.0-rc.27",
     "graphql-yoga": "1.17.4",
     "install": "0.12.2",
