--- a/apollo-gate-way/order_service/package.json
+++ b/apollo-gate-way/order_service/package.json
@@ -11,6 +11,7 @@
     "apollo-server": "2.6.3",
     "dotenv": "7.0.0",
     "express": "~4.16.0",
+    "faye": "1.2.4",
     "graphql-voyager": "1.0.0-rc.27",
     "graphql-yoga": "1.17.4",
     "merge-graphql-schemas": "1.5.8",
